Make sure that users cannot scale the website when visiting on mobile, and that landscape warning is only shown when on an actual phone

--- a/src/styles/SenatorName.scss
+++ b/src/styles/SenatorName.scss
@@ -5,7 +5,7 @@
 	margin-top: 10px;
 	position: relative;
 	z-index: 2;
-	padding: 20px;
+	padding: 15px;
 	background-color: $light-orange;
 
 	@media screen and (max-width: $iphone6) {
@@ -14,7 +14,7 @@
 
 	h2 {
 		margin: 0;
-		font-size: 1.5em;
+		font-size: 1.3em;
 
 		@media screen and (max-width: $iphone6) {
     		font-size: 0.9em;
