--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -119,6 +119,9 @@ ul {
 #left, #right {
   top: 0; bottom: 0;
   width: 15px;
+  @media screen and (max-width: $iphone6) {
+    width: 8px;
+  }
 }
 
 #left { left: 0; }
@@ -127,20 +130,21 @@ ul {
 #top, #bottom {
   left: 0; right: 0;
   height: 15px;
+  @media screen and (max-width: $iphone6) {
+    height: 7px;
+  }
 }
 
 #top { top: 0; }
 #bottom { bottom: 0; }
 
-@media only screen and (orientation:portrait){
-  .overlay {
-    display: none;
-    opacity: 0;
-    @include transition(1s);
-  }
+.overlay {
+  display: none;
+  opacity: 0;
+  @include transition(1s);
 }
 
-@media only screen and (orientation:landscape){
+@media only screen and (max-width: $iphone6) and (orientation:landscape){
   .overlay {
     font-family: Helvetica;
     text-align: center;
